<resources>
    <string name="app_name">Navigate</string>
    <string name="navigate">Navigate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Calvin Costa</string>
    <string name="nav_header_subtitle">calvincosta1@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="e_mail_address">E-Mail Address:</string>
    <string name="password">Password:</string>
    <string name="loading">Loading</string>
    <string name="calvincosta1_gmail_com">calvincosta1@gmail.com</string>
    <string name="_123456">123456</string>
    <string name="map">Map</string>
    <string name="logout">Logout</string>
    <string name="name">Full Name:</string>
    <string name="register">Register</string>
    <string name="metric">Metric</string>
    <string name="need_acc">Need an account? Register here</string>
    <string name="already_acc">Already have an account? Login here</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="update">Update</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="logout_fragment">Logout Fragment</string>
    <string name="save">Save</string>
    <string name="profile2">Profile</string>
    <string name="locations">Locations</string>
    <string name="settings">Settings</string>

    <string name="start_navigation">Start Navigation</string>
    <string name="day">Day</string>
    <string name="was_in_tunnel" />
    <string name="was_navigation_stopped" />
    <string name="transport_mode">Transport Mode:</string>
    <string name="mode_of_transport">Mode Of Transport:</string>
    <string name="unit">Unit of Measurement:</string>

    <string name="access_token">pk.eyJ1Ijoia2VlZ3MyMyIsImEiOiJja2NwNnZoZjMwbGYyMzFsZGczYmdwMjRsIn0.TfGQSPlUWq3KCCzrCxRutg</string>
    <string name="clear">Clear</string>
    <string name="recent_locations">Recent Locations</string>
</resources>
