<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_map"
            android:title="@string/map"
            android:fontFamily="@font/roboto"/>
        <item
            android:id="@+id/nav_workout"
            android:icon="@drawable/ic_location"
            android:title="@string/locations"
            android:fontFamily="@font/roboto"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            android:fontFamily="@font/roboto"/>
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"
                android:fontFamily="@font/roboto"/>
        </menu>
    </item>

</menu>
